# ai_services

./: .gitignore  20260503-PROBLEM.md  CLAUDE.md  Contributors.md  LICENSE  README.md  pyproject.toml
demoapp/: README.md  demoapp.py  requirements.txt
docker-faster-whisper/: docker-compose.yaml
glm-4dot7-flash/: Dockerfile  QUICKSTART.md  README.md  build.sh  download_model_bf16.sh  start_server_bf16.sh  test_server.sh
gpu-dashboard/: custom.css  docker-compose.yml  prometheus.yml
image-generation/: .gitignore  README.md
librechat/: .env.example  README.md  docker-compose.yml  librechat.yaml
models/: README.md
odysseus/: .env.example  .gitignore  README.md  docker-compose.yaml
ollama/: README.md  docker-compose.prerelease.yaml  docker-compose.rocm.yaml  docker-compose.yaml  test_ollama_api.py  test_tools.py
qwen-3dot5/: README.md  docker-compose.llama-0.8b.yml  docker-compose.llama-122b-devfix-rtx.yml  docker-compose.llama-27b-devfix-spark.yml  docker-compose.llama-27b-devfix-vulkan.yml  docker-compose.llama-27b-devfix.yml  docker-compose.llama-2b-devfix-rtx.yml  docker-compose.llama-2b.yml  docker-compose.llama-35b-devfix-spark.yml  docker-compose.llama-35b-devfix-vulkan.yml  docker-compose.llama-35b-devfix.yml  docker-compose.llama-4b.yml  docker-compose.llama-9b.yml  docker-compose.llama-coder-next-rtx.yml  docker-compose.llama-qwopus-27b-rtx.yml  docker-compose.sglang-fp8.yaml  (+20 more)
qwen-3dot5-vllm/: README.md  docker-compose.1m.yaml  docker-compose.fp8.yaml  docker-compose.sglang-fp8.yaml  docker-compose.text-only.yaml  docker-compose.yaml  test_chat.py
(+296 files in other folders)
