[project]
name = "ai-services"
version = "0.1.0"
description = "TUI for managing local LLM docker-compose deployments"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "pyyaml>=6.0",
    "openai>=1.40",
    "httpx>=0.27",
    "jiwer>=3.0",
    "datasets>=2.21,<3.0",
    "soundfile>=0.12",
    "librosa>=0.10",
]

[project.scripts]
tui = "tui:main"
