[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-services"
version = "0.1.0"
description = "TUI for managing local LLM docker-compose deployments"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "pyyaml>=6.0",
    "openai>=1.40",
    "httpx>=0.27",
    "jiwer>=3.0",
    "datasets>=2.21,<3.0",
    "soundfile>=0.12",
    "librosa>=0.10",
]

[project.optional-dependencies]
# Image playground test app — models/z-image/gradio_app.py
# Install with:  pip install -e ".[gradio]"
gradio = [
    "gradio>=4.44,<6",
    "requests>=2.31,<3",
    "Pillow>=10.4,<12",
]

[project.scripts]
tui = "tui:main"

# Flat repo with many top-level dirs — the only installable module is tui.py.
[tool.setuptools]
py-modules = ["tui"]
